Updated java plugin doc to `run`.